# agent-debate

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  buy-vs-build-transcript.md  debate-bridge  pyproject.toml
scripts/: install.sh  uninstall.sh
skills/claude/debate-peer/: SKILL.md
skills/codex/debate-peer/: SKILL.md
src/claude_codex_debate/: admin.py  bridge.py  config.py  mcp_server.py  store.py  terminal.py  transcript.py  web.py
src/claude_codex_debate/webui/: index.html
src/claude_codex_debate/webui/assets/: index-C335Dn8j.css  index-DNnoqllH.js  index-DZmDoX4_.js
tests/: test_store.py  test_terminal.py  test_transcript.py  test_web.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: announce.ts  api.ts  debate.ts  format.ts  main.ts  overview.ts  styles.css  system.ts  types.ts
