[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-codex-debate"
version = "1.0.0"
description = "A local MCP debate relay and macOS event bridge for Claude Code and Codex CLI"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = ["mcp>=1.2.0"]

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27"]

[project.scripts]
debate-mcp = "claude_codex_debate.mcp_server:main"
debate-admin = "claude_codex_debate.admin:main"
debate-bridge = "claude_codex_debate.bridge:main"
debate-web = "claude_codex_debate.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claude_codex_debate = ["webui/*", "webui/assets/*"]
